CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)
PROJECT(fmt-logging CXX)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

INCLUDE(CheckIncludeFileCXX)
MACRO(CHECK_INCLUDE_FILE_CXX_ERROR INCLUDE_FILE)
  CHECK_INCLUDE_FILE_CXX(${INCLUDE_FILE} checked_${INCLUDE_FILE})
  IF(NOT checked_${INCLUDE_FILE})
    UNSET(HAVE_UNITTESTXX CACHE)
    MESSAGE( FATAL_ERROR "${INCLUDE_FILE} is not found" )
  ENDIF()
ENDMACRO()

CHECK_INCLUDE_FILE_CXX_ERROR("stdarg.h")
CHECK_INCLUDE_FILE_CXX_ERROR("stdio.h")
CHECK_INCLUDE_FILE_CXX_ERROR("string.h")
CHECK_INCLUDE_FILE_CXX_ERROR("time.h")

ADD_LIBRARY(fmt-logging STATIC "fmt-logging.cc") 

